--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongo_url= mongodb+srv://educationjs001:8f2gF6PYEbVyhUYB@cluster0.4oazixz.mongodb.net/;
+mongo_url= mongodb+srv:/omartraii:8f2gF6PYEbVyhUYB@cluster0.4oazixz.mongodb.net/;
